--- a/static/templates/admin.html
+++ b/static/templates/admin.html
@@ -22,15 +22,40 @@ document.addEventListener('DOMContentLoaded', function() {
 
         const thIndex = Array.from(th.parentNode.children).indexOf(th);
 
-        const columnIndex = thIndex + 1;
+        const hiddenIndexes = [thIndex + 1, thIndex + 2];
 
-        const feeUpdateTds = document.querySelectorAll(`td:nth-child(${columnIndex})`);
-        const feeUpdateTh = document.querySelector(`th:nth-child(${columnIndex})`);
+        for (let i = 0, max = hiddenIndexes.length; i < max; i++) {
+            const tds = document.querySelectorAll(`td:nth-child(${hiddenIndexes[i]})`);
+            const th = document.querySelector(`th:nth-child(${hiddenIndexes[i]})`);
 
-        const isHidden = feeUpdateTh.style.display === 'none';
-        feeUpdateTh.style.display = isHidden ? '' : 'none';
-        feeUpdateTds.forEach(td => {
-            td.style.display = isHidden ? '' : 'none';
+            th.style.display = 'none';
+            tds.forEach(td => {
+                td.style.display = 'none';
+            });
+        }
+    });
+
+    const editableElements = document.querySelectorAll('.editable-career-periods');
+
+    editableElements.forEach(element => {
+        element.addEventListener('blur', function(event) {
+            const careerPeriods = event.target.innerText.trim();
+            const userId = event.target.getAttribute('data-user-id');
+            const ticket = element.getAttribute('data-ticket');
+
+            fetch(`/admin/user/careerPeriodUpdate`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+                body: new URLSearchParams({ careerPeriods: careerPeriods, uid: userId, ticket: ticket }),
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        console.log("更新成功");
+                    } else {
+                        console.error("更新失败:", data.message);
+                    }
+                });
         });
     });
 });
@@ -68,6 +93,7 @@ document.addEventListener('DOMContentLoaded', function() {
             <th>手机号</th>
             <th>状态</th>
             <th>费用更新 <input type="button" value="隐藏本列" id="btFeeHidden"></th>
+            <th>职业生涯</th>
         </tr>
         {{ range .Users }}
         <tr>
@@ -129,6 +155,16 @@ document.addEventListener('DOMContentLoaded', function() {
                     <input type="text" name="fareBalance" placeholder="车费" size="4">
                     <input type="submit" value="添加">
                 </form>
+            </td>
+            <td>
+                <div
+                        class="editable-career-periods"
+                        contenteditable="true"
+                        data-user-id="{{ .ID }}"
+                        data-ticket="{{ $.Ticket }}"
+                >
+                    {{ printf .CareerPeriods }}
+                </div>
             </td>
         </tr>
         {{ end }}
