--- a/static/templates/admin.html
+++ b/static/templates/admin.html
@@ -74,7 +74,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 const ticket = element.getAttribute('data-ticket');
                 const oldBalance = parseFloat(event.target.getAttribute('data-balance'));
 
-                if (balance > 1 && Math.abs(oldBalance - balance) < 0.05) {
+                if (balance !== 1 && Math.abs(oldBalance - balance) < 0.05) {
                     return;
                 }
 
